<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Ajustes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Título Ajustes -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ajustes"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Idioma con emoticono y flecha, con acción onClick -->
            <LinearLayout
                android:id="@+id/linear_idioma"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center_vertical"
                android:onClick="onIdiomaClick"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/Cambiar_idioma"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Flecha para desplegar opciones -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/expandir_opciones_de_idioma"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="16dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/eliminar_mis_pokemon"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Asegúrate de que el SwitchCompat tenga suficiente área táctil -->
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_eliminar_pokemon"
                    android:layout_width="72dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="12dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/activar"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Acerca de -->
            <LinearLayout
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <!-- Emoticono Acerca de -->
                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_info" /> <!-- Reemplaza con el emoticono adecuado -->

                <TextView
                    android:layout_width="298dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:text="@string/acerca_de"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/ver_m_s_informaci_n"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <!-- Cerrar sesión -->
            <LinearLayout
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_exit_to_app" />

                <TextView
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cerrar_sesi_n"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/cerrar_sesi_nn"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>