<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    tools:context=".CapturedPokemonFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Imagen del Pokémon -->
        <ImageView
            android:id="@+id/pokemonImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp" />

        <!-- Nombre y detalles del Pokémon -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pokemonTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipos"
                android:textStyle="bold"
                android:textSize="18sp" />


        </LinearLayout>

        <!-- Botón de eliminar -->
        <ImageView
            android:id="@+id/buttonDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/eliminar_pok_mon"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</androidx.cardview.widget.CardView>